Web UI adjustments
Mainly making page styles consistent and ensuring that panels (divs) on the page can flow to fit portrait or landscape screens.

--- a/CBASS_32/htdocs/page.css
+++ b/CBASS_32/htdocs/page.css
@@ -26,7 +26,9 @@ html {
 	display: flex;
 	flex-direction: row;
 	flex-wrap: wrap;
-	justify-content: space-around;
+	justify-content: flex-start;
+	column-gap: 5px;
+	height: 99%;
 }
 
 .wrapper {
@@ -88,5 +90,3 @@ tr:nth-child(even) {
 table {
 	border-collapse: collapse;
 }
-
-
