Too many changes
This should have been done in stages, but here's the gist:
1) Cleaned up some development comments by deleting obsolete ones and moving some the to the documentation.
2) More reliable computation of the number  of points to save for interactive graphing.
3) Many small tweaks to the web interface, so sizing and alignment is more consistent.  This  includes html, javascript, and CSS so be sure to update any existing page.css with the SPIFF_uploadV2 tool.
4) Fixed a bug in which a ramp plan reset would be appended, rather than replacing the old one.
5) Fixed nonlinear time axis in the ramp plan so it displays correctly.  The plotly tool was seeing the times as a list of strings rather than as date-time values.

--- a/CBASS_32_BoardV2/htdocs/page.css
+++ b/CBASS_32_BoardV2/htdocs/page.css
@@ -38,10 +38,9 @@ html {
 }
 
 .wrapper > div {
-  background-color: rgb(89,161,175);
+  /* background-color: rgb(89,161,175); */
   border-radius: 5px;
   padding: 10px;
-  color: #fff;
   font-weight: bold;
 }
 
@@ -79,13 +78,13 @@ html {
 	width: 100%;
 }
 
-#tablediv, #tableextras {
-	width: 450;
+#tablediv {
+	width: fit-content;
 }
 
 #rgraph {
-	width: 400px;
-	height: 300px;
+	width: 500px;
+	height: 500px;
 }
 
 th, td {
